Final Exit Game.html

--- a/Final Project/Exit Game.html
+++ b/Final Project/Exit Game.html
@@ -277,14 +277,12 @@
         }
 
         function winGame() {
-            winMessage = "You Win :)";
+            winMessage = " You Win!  Press refresh to play again ";
             winMessageTimer = frameCount + 180;
             resetPlayer();
         }
 
         function loseGame() {
-            winMessage = "You Lose :(";
-            winMessageTimer = frameCount + 180;
             resetPlayer();
         }
 
